Fixed z-index error, added bottom border of header again, enabled content scrolling.

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -4,8 +4,9 @@
 #app-header {
     @include display(flex);
     @include position(fixed, 0px 0px auto 0px);
-    z-index: zi-header;
+    z-index: $zi-header;
     @include size(100vw $header-height);
+    border-bottom: 1px solid $c-control-border;
     @include linear-gradient($c-control-face-light, $c-control-face-dark);
     @include align-items(center);
     
@@ -18,6 +19,7 @@
 
 #content {
     @include position(fixed, $header-height 0px 0px 0px);
-    z-index: zi-content;
+    z-index: $zi-content;
     background-color: $c-control-face;
+    overflow: scroll;
 }
